make it eventmachine driven

--- a/example/mongrel2.conf
+++ b/example/mongrel2.conf
@@ -3,6 +3,10 @@ darkblog2 = Host(name='localhost', routes={
     send_ident='9539ED88-1B33-4D19-A9F9-283E5BF11AC7',
     recv_spec='tcp://127.0.0.1:9996',
     recv_ident='')
+  '/async/': Handler(send_spec='tcp://127.0.0.1:9999',
+    send_ident='AEE66029-E420-42E7-A7C8-6C37BBFC7B9F',
+    recv_spec='tcp://127.0.0.1:9998',
+    recv_ident='')
 })
 
 main = Server(
