add example for big upload

--- a/example/mongrel2.conf
+++ b/example/mongrel2.conf
@@ -7,6 +7,10 @@ darkblog2 = Host(name='localhost', routes={
     send_ident='AEE66029-E420-42E7-A7C8-6C37BBFC7B9F',
     recv_spec='tcp://127.0.0.1:9998',
     recv_ident='')
+  '/upload/': Handler(send_spec='tcp://127.0.0.1:10001',
+    send_ident='51226E47-AE49-4BC8-A9C6-BD7F6827E8A4',
+    recv_spec='tcp://127.0.0.1:10000',
+    recv_ident='')
 })
 
 main = Server(
@@ -24,7 +28,9 @@ main = Server(
 
 settings = {
   'zeromq.threads': 1,
-  'control_port': 'ipc://tmp/mongrel2_control'
+  'control_port': 'ipc://tmp/mongrel2_control',
+  'upload.temp_store': '/tmp/mongrel2.upload.XXXXXX',
+  'limits.content_length': 1024
 }
 
 servers = [main]
